<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="15dp"
                android:gravity="center">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="133dp"
                    app:srcCompat="@drawable/unal" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:text=""
                    android:textSize="15sp" />
            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonLogin"
                    style="@android:style/Widget.DeviceDefault.Button.Colored"
                    android:layout_width="174dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:onClick="login"
                    android:text="@string/login"
                    android:textColor="@color/colorSecond"
                    android:textSize="11sp" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="129dp"
                android:gravity="center">


                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="signUpActivity"
                    android:text="@string/signUp"
                    android:textColor="@color/colorSecond"
                    android:textSize="11sp" />
            </TableRow>


        </TableLayout>




    </LinearLayout>

</LinearLayout>