<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="133dp"
                        app:srcCompat="@drawable/unal" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/viewCompaniesButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:onClick="viewCompanies"
                        android:text="@string/viewCompanies"
                        android:textSize="11sp" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center">

                    <Button
                        android:id="@+id/settingsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:onClick="companySettings"
                        android:text="@string/companySettings"
                        android:textSize="11sp" />
                </TableRow>


               <TableRow
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_marginTop="15dp"
                   android:gravity="center">

                   <Button
                       android:id="@+id/deleteButton"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:background="#00FFFFFF"
                       android:onClick="deleteCompany"
                       android:text="@string/delete"
                       android:textSize="11sp"/>
               </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:gravity="center">


                </TableRow>

            </TableLayout>
        </LinearLayout>
    </ScrollView>


 </LinearLayout>